# injective_simple

./: .gitignore  Cargo.toml  README.md
examples/: schema.rs
src/: contract.rs  error.rs  lib.rs
